@@ -319,6 +319,7 @@ fully support the editing toolbar, but was found to be too confusing.
   a raw string to abstract things a level.
 * (bug 4258) Use ugly urls for ISAPI by default
   patch by Rob Church
+* Fixed --server override on dumpTextPass.php
 
 
 === Caveats ===
